[package]
name = "nuscenes-data"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
npy = "~0"
serde_json = "~1"
serde = { version = "~1", features = ["derive"] }
failure = "~0"
hex = "~0"
chrono = { version = "~0", features = ["serde"] }
itertools = "~0"
image = "~0"