[package]
name = "nuscenes-data-image"
version = "0.1.0"
edition = "2021"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Extension crate to nuscenes-data adding `image` integration"
categories = ["parsing"]
documentation = "https://docs.rs/nuscenes-data/"
repository = "https://github.com/jerry73204/nuscenes-data-rs"
homepage = "https://github.com/jerry73204/nuscenes-data-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
nuscenes-data = { version = "0.3.0", path = "../nuscenes-data" }

[dev-dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
show-image = { version = "0.13.1", features = ["image"] }
