[package]
name = "nuscenes-data-nalgebra"
version = "0.1.0"
edition = "2021"
description = "Extension crate to nuscenes-data adding `nalgebra` integration"
categories = ["parsing"]
documentation = "https://docs.rs/nuscenes-data/"
repository = "https://github.com/jerry73204/nuscenes-data-rs"
homepage = "https://github.com/jerry73204/nuscenes-data-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
nuscenes-data = { version = "0.4.0", path = "../nuscenes-data" }
