[package]
name = "nuscenes-data-opencv"
version = "0.1.0"
edition = "2021"
description = "Extension crate to nuscenes-data adding `opencv` integration"
categories = ["parsing"]
documentation = "https://docs.rs/nuscenes-data/"
repository = "https://github.com/jerry73204/nuscenes-data-rs"
homepage = "https://github.com/jerry73204/nuscenes-data-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nuscenes-data = { version = "0.3.0", path = "../nuscenes-data" }
opencv = { version = "0.82.1", default-features = false, features = ["imgcodecs"] }
