[package]
name = "nuscenes-data-pcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nuscenes-data = { version = "0.3.0", path = "../nuscenes-data" }
pcd-rs = { version = "0.10.0", features = ["derive"] }
