[package]
name = "nuscenes-data-pcd"
version = "0.1.0"
edition = "2021"
description = "Extension crate to nuscenes-data adding `pcd-rs` integration"
categories = ["parsing"]
documentation = "https://docs.rs/nuscenes-data/"
repository = "https://github.com/jerry73204/nuscenes-data-rs"
homepage = "https://github.com/jerry73204/nuscenes-data-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nuscenes-data = { version = "0.3.0", path = "../nuscenes-data" }
pcd-rs = { version = "0.10.0", features = ["derive"] }
raw-parts = "2.0.0"

[dev-dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.8", features = ["derive"] }
kiss3d = "0.35.0"
