[package]
name = "nuscenes-data"
version = "0.3.0"
edition = "2021"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "NuScenes dataset loader in Rust"
categories = ["parsing"]
documentation = "https://docs.rs/nuscenes-data/"
repository = "https://github.com/jerry73204/nuscenes-data-rs"
homepage = "https://github.com/jerry73204/nuscenes-data-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
itertools = "0.10.5"
ownref = "0.3.1"
rayon = "1.7.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
